fixed overflow problem for chrome

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,13 @@
   margin: 0;
 }
 
+html {overflow-x: hidden; overflow-y: auto;}
+
 body {
-  overflow-y: scroll;
+  /* overflow-y: scroll;
   overflow-x: hidden;
+  width: 100%;
+  height: 100%; */
 }
 
 .App {
@@ -483,7 +487,7 @@ SMALL BUSINESS SECTION
   grid-row: 1;
   height: 542.4px;
   width: 980.49px;
-  opacity: 0.8;
+  opacity: 0.3;
 }
 
 #lrgROI {
