--- a/src/styles/smallBusinessQuery.css
+++ b/src/styles/smallBusinessQuery.css
@@ -28,6 +28,7 @@
         width: 400px;
         height: 325px;
         z-index: 0;
+        opacity: 0.8;
     }
 
     #pdb {
